PLANET-7444 Fix left/right aligned images in all post types
This was only working in posts

--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -63,14 +63,21 @@
     position: relative;
   }
 
-  .alignleft {
-    margin: 0 $sp-1 $sp-1 0;
-    padding-top: 6px;
+  @include small-and-up {
+    &.alignleft {
+      float: left;
+      margin-inline-end: $sp-1;
+    }
+
+    &.alignright {
+      float: right;
+      margin-inline-start: $sp-1;
+    }
   }
 
-  .alignright {
-    margin: 0 0 $sp-1 $sp-1;
-    padding-top: 6px;
+  &.aligncenter {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @include medium-and-up {
